--- a/mars_data_challenge_part_1.ipynb
+++ b/mars_data_challenge_part_1.ipynb
@@ -52,7 +52,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create an empty ditionary and an empty list\n",
+    "# Create an empty list\n",
     "articles = []\n",
     "\n",
     "# Name title and preview for parsing\n",
